[package]
name = "mbus-ffi"
version = "0.14.0"
edition.workspace = true
authors.workspace = true
license-file = "LICENSE"
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true
description = "Native C FFI and browser WASM bindings for modbus-rs client APIs, with optional generated server bindings"

[lib]
crate-type = ["rlib", "staticlib", "cdylib"]

[features]
default = []
## Enables defmt logging support for embedded/no_std targets.
logging = []
## Enables Display trait implementations for error types.
display = []
error-trait = ["mbus-core/error-trait"]
## Internal feature: provides stub implementations for extern "C" locking functions
## when building as a cdylib without a C caller (NAPI, Python, Go, .NET).
internal-lock-stubs = []
## Enables all WASM bindings for browser transports (`mbus-network` + `mbus-serial`).
wasm = [
    "dep:wasm-bindgen",
    "dep:js-sys",
    "dep:wasm-bindgen-futures",
    "dep:gloo-timers",
    "dep:mbus-client",
    "mbus-network/wasm",
    "mbus-serial/wasm",
]
## Enables native C FFI bindings for the Modbus client stack.
c-client = ["dep:mbus-client"]
## Enables native C FFI bindings for the Modbus server stack.
c-server = ["dep:mbus-server"]
## Enables native C FFI bindings for the Modbus gateway stack.
c-gateway = ["dep:mbus-gateway"]
## Enables traffic notification callbacks on the C server (mbus-server `traffic` feature).
server-traffic = ["c-server", "mbus-server/traffic"]

## Feature forwarding — each feature enables the corresponding FC group on
## mbus-client AND (when c-server is active) on mbus-server.
coils = ["mbus-client?/coils", "mbus-server?/coils"]
holding-registers = [
    "mbus-client?/holding-registers",
    "mbus-server?/holding-registers",
]
input-registers = [
    "mbus-client?/input-registers",
    "mbus-server?/input-registers",
]
registers = ["holding-registers", "input-registers"]
discrete-inputs = [
    "mbus-client?/discrete-inputs",
    "mbus-server?/discrete-inputs",
]
fifo = ["mbus-client?/fifo", "mbus-server?/fifo"]
file-record = ["mbus-client?/file-record", "mbus-server?/file-record"]
diagnostics = ["mbus-client?/diagnostics", "mbus-server?/diagnostics"]

traffic = [
    "mbus-client?/traffic",
    "mbus-server-async?/traffic",
    "mbus-client-async?/traffic",
]
## Enables TCP network transport support (mbus-client-async, mbus-gateway).
network-tcp = [
    "mbus-client-async?/network-tcp",
    "mbus-gateway?/upstream-tcp",
    "mbus-gateway?/upstream-ws",
    "mbus-gateway?/downstream-tcp",
]
## Enables Modbus RTU serial transport support (mbus-client-async, mbus-gateway, mbus-client, mbus-server).
serial-rtu = [
    "mbus-client-async?/serial-rtu",
    "mbus-gateway?/upstream-serial-rtu",
    "mbus-gateway?/downstream-serial-rtu",
]
## Enables Modbus ASCII serial transport support (mbus-client-async, mbus-gateway, mbus-client, mbus-server).
serial-ascii = [
    "mbus-client-async?/serial-ascii",
    "mbus-gateway?/upstream-serial-ascii",
    "mbus-gateway?/downstream-serial-ascii",
    "mbus-client?/serial-ascii",
    "mbus-server?/serial-ascii",
]
## Convenience alias — enables every Modbus client + server FC feature at once
full = [
    "c-client",
    "c-server",
    "c-gateway",
    "coils",
    "registers",
    "discrete-inputs",
    "fifo",
    "file-record",
    "diagnostics",
    "traffic",
    "error-trait",
    "network-tcp",
    "serial-rtu",
    "serial-ascii",
]
## Convenience alias — enables all server features (c-server must also be enabled)
server-full = [
    "c-server",
    "coils",
    "registers",
    "holding-registers",
    "input-registers",
    "discrete-inputs",
    "fifo",
    "file-record",
    "diagnostics",
    "network-tcp",
    "serial-rtu",
    "serial-ascii",
]

## Convenience alias — enables all server features (c-server must also be enabled)
client-full = [
    "c-client",
    "coils",
    "registers",
    "holding-registers",
    "input-registers",
    "discrete-inputs",
    "fifo",
    "file-record",
    "diagnostics",
    "network-tcp",
    "serial-rtu",
    "serial-ascii",
]

## Convenience alias for Go bindings — enables client/gateway/server features
## Note: Does NOT include c-server (YAML-based application server)
## Go uses vtable-based server interface instead
go-full = [
    "go",
    "c-client",
    "c-gateway",
    "coils",
    "registers",
    "discrete-inputs",
    "fifo",
    "file-record",
    "diagnostics",
    "traffic",
    "error-trait",
    "network-tcp",
    "serial-rtu",
    "serial-ascii",
]

## Enables Python bindings for the gateway. Requires `python` to be enabled too;
## build with `--features python,python-gateway,full`.
python-gateway = [
    "python",
    "dep:mbus-gateway",
    "dep:mbus-network",
    "mbus-gateway/async",
    "mbus-network/async",
]

## Enables Python bindings (PyO3 / Maturin) for the Modbus client + server stack.
## Requires the `full` feature set; build with `--features python-full`.
python = [
    "dep:pyo3",
    "dep:pyo3-async-runtimes",
    "dep:tokio",
    "dep:mbus-client-async",
    "dep:mbus-server-async",
    "coils",
    "registers",
    "discrete-inputs",
    "fifo",
    "file-record",
    "diagnostics",
    "mbus-client-async/serial-rtu",
    "mbus-client-async/serial-ascii",
    "mbus-server-async/server-serial",
    "internal-lock-stubs",
]

## Convenience alias for Python bindings — enables client/gateway/server features
## Note: Does NOT include c-server (YAML-based application server)
## Python uses its own server interface
python-full = [
    "python",
    "c-client",
    "c-gateway",
    "coils",
    "registers",
    "discrete-inputs",
    "fifo",
    "file-record",
    "diagnostics",
    "traffic",
    "error-trait",
    "network-tcp",
    "serial-rtu",
    "serial-ascii",
]

## Enables native Go (cgo) bindings for the Modbus client/server/gateway stack.
##
## Mirrors the `dotnet` feature: builds the cdylib + staticlib with the same
## `mbus-client-async` / `mbus-server-async` / `mbus-gateway` underpinnings,
## but exports symbols with the `mbus_go_*` prefix so the Go binding can
## evolve independently of the .NET binding. Build with:
##
##     cargo build --release -p mbus-ffi --features go-full
go = [
    "dep:tokio",
    "dep:mbus-client-async",
    "dep:mbus-server-async",
    "dep:mbus-gateway",
    "dep:mbus-network",
    "coils",
    "registers",
    "discrete-inputs",
    "fifo",
    "diagnostics",
    "mbus-client-async/serial-rtu",
    "mbus-client-async/serial-ascii",
    "mbus-server-async/server-serial",
    "mbus-gateway/async",
    "mbus-network/async",
    "internal-lock-stubs",
]
## Enables traffic notification callbacks on the Go server (mbus-server-async `traffic` feature).
go-traffic = ["go", "mbus-server-async/traffic", "mbus-client-async/traffic"]

## Enables Node.js bindings (napi-rs) for the Modbus client/server/gateway stack.
##
## Build with `cargo build --release -p mbus-ffi --features nodejs-full`.
## The npm package resides in `mbus-ffi/nodejs/` and uses `napi build` to
## produce the native addon.
nodejs = [
    "dep:napi",
    "dep:napi-derive",
    "dep:serde_json",
    "dep:serde",
    "dep:tokio",
    "dep:mbus-client-async",
    "dep:mbus-server-async",
    "dep:mbus-gateway",
    "dep:mbus-network",
    "coils",
    "registers",
    "discrete-inputs",
    "fifo",
    "file-record",
    "diagnostics",
    "mbus-client-async/serial-rtu",
    "mbus-client-async/serial-ascii",
    "mbus-server-async/server-serial",
    "mbus-gateway/async",
    "mbus-network/async",
    "internal-lock-stubs",
]
## Enables traffic notification callbacks on the Node.js server/client.
nodejs-traffic = [
    "nodejs",
    "mbus-server-async/traffic",
    "mbus-client-async/traffic",
]

## Convenience alias for Node.js bindings — enables client/gateway/server features
## Note: Does NOT include c-server (YAML-based application server)
## Node.js uses its own server interface
nodejs-full = [
    "nodejs",
    "c-client",
    "c-gateway",
    "coils",
    "registers",
    "discrete-inputs",
    "fifo",
    "file-record",
    "diagnostics",
    "traffic",
    "error-trait",
    "network-tcp",
    "serial-rtu",
    "serial-ascii",
]

## Enables native .NET (C#) P/Invoke bindings for the Modbus client stack.
## Generates a separate `modbus_rs_dotnet.h` header and exposes async request
## functions intended to be wrapped by the managed `ModbusRs` C# project under
## `mbus-ffi/dotnet/`. Build with `--features dotnet-full`.
dotnet = [
    "dep:tokio",
    "dep:mbus-client-async",
    "dep:mbus-server-async",
    "dep:mbus-gateway",
    "dep:mbus-network",
    "coils",
    "registers",
    "discrete-inputs",
    "fifo",
    "diagnostics",
    "mbus-client-async/serial-rtu",
    "mbus-client-async/serial-ascii",
    "mbus-server-async/server-serial",
    "mbus-gateway/async",
    "mbus-network/async",
    "internal-lock-stubs",
]

## Convenience alias for .NET bindings — enables client/gateway/server features
## Note: Does NOT include c-server (YAML-based application server)
## .NET uses its own server interface
dotnet-full = [
    "dotnet",
    "c-client",
    "c-gateway",
    "coils",
    "registers",
    "discrete-inputs",
    "fifo",
    "file-record",
    "diagnostics",
    "traffic",
    "error-trait",
    "network-tcp",
    "serial-rtu",
    "serial-ascii",
]

[dependencies]
mbus-core = { workspace = true }
# mbus-client is optional to prevent its symbols from being unconditionally baked
# into the C static library. This avoids binary bloat for server-only builds on bare-metal targets.
mbus-client = { workspace = true, default-features = false, optional = true }
mbus-server = { workspace = true, optional = true, default-features = false }
mbus-gateway = { workspace = true, optional = true }
mbus-network = { workspace = true, optional = true }
heapless = { workspace = true }
serde = { version = "1.0", default-features = false, features = [
    "derive",
], optional = true }

## Python binding deps — only pulled in when `python` feature is enabled.
pyo3 = { version = "0.28.3", features = ["extension-module"], optional = true }
pyo3-async-runtimes = { version = "0.28.0", features = [
    "tokio-runtime",
], optional = true }
tokio = { version = "1", features = ["full"], optional = true }
mbus-client-async = { workspace = true, features = [
    "coils",
    "registers",
    "discrete-inputs",
    "fifo",
    "file-record",
    "diagnostics",
], optional = true }
mbus-server-async = { workspace = true, features = [
    "coils",
    "registers",
    "discrete-inputs",
    "fifo",
    "file-record",
    "diagnostics",
], optional = true }

## Node.js binding deps — only pulled in when `nodejs` feature is enabled.
napi = { version = "3", default-features = false, features = [
    "napi6",
    "tokio_rt",
    "async",
    "compat-mode",
    "serde-json",
], optional = true }
napi-derive = { version = "3", optional = true }
serde_json = { version = "1", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
## mbus-client provides the sync client state machine (used by WASM bindings)
mbus-client = { workspace = true, default-features = false, optional = true }
## mbus-network is needed for WasmWsTransport (re-exported when `wasm` feature is on)
mbus-network = { workspace = true }
## mbus-serial provides WasmSerialTransport for browser Web Serial integration.
mbus-serial = { workspace = true }

# WASM-only dependencies — not pulled in for native builds.
# Note: web-sys is pulled in transitively through mbus-network/wasm.
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
gloo-timers = { version = "0.3", features = ["futures"], optional = true }

[build-dependencies]
cbindgen = { version = "0.29" }
mbus-codegen = { workspace = true }
napi-build = { version = "2" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# No native-only deps needed; this section exists as an explicit marker.

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Window"] }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
## In-process AsyncTcpServer used by the .NET binding integration test.
mbus-async = { version = "0.14.0", path = "../mbus-async", features = [
    "server-tcp",
    "registers",
] }
anyhow = "1"

[[example]]
name = "dotnet_test_server"
required-features = ["registers"]
