[package]
name = "mbus-gateway"
version = "0.14.0"
edition.workspace = true
authors.workspace = true
license-file = "LICENSE"
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true
description = "Modbus gateway runtime — bridges upstream TCP/serial masters to downstream slave buses with PDU-level framing translation"

[dependencies]
mbus-core = { workspace = true, features = [
    "coils",
    "holding-registers",
    "input-registers",
    "diagnostics",
    "fifo",
    "file-record",
] }
heapless = { workspace = true }
log = { workspace = true, optional = true }
mbus-network = { workspace = true, optional = true }
mbus-serial = { workspace = true, optional = true }
tokio = { version = "1", features = [
    "net",
    "sync",
    "rt",
    "macros",
    "time",
], optional = true }
tokio-tungstenite = { version = "0.29.0", optional = true }

[dev-dependencies]
anyhow = "1.0"
mbus-network = { workspace = true, features = ["async"] }
mbus-core = { workspace = true }
tokio = { version = "1", features = [
    "net",
    "sync",
    "rt",
    "macros",
    "rt-multi-thread",
    "signal",
] }
tokio-test = "0.4"

[features]
# By default, compile all capabilities so the workspace works seamlessly.
default = [
    "async",
    "logging",
    "upstream-tcp",
    "upstream-serial-rtu",
    "upstream-serial-ascii",
    "upstream-ws",
    "downstream-tcp",
    "downstream-serial-rtu",
    "downstream-serial-ascii",
]

# Core features
async = [
    "dep:tokio",
    "mbus-core/async",
    "mbus-network?/async",
    "mbus-serial?/async",
    "std-required",
]
logging = ["dep:log", "std-required"]
traffic = []
std-required = []

# Upstream features
upstream-tcp = ["async", "dep:mbus-network", "std-required"]
upstream-ws = [
    "async",
    "dep:mbus-network",
    "mbus-network/ws-server",
    "dep:tokio-tungstenite",
    "std-required",
]
upstream-serial-rtu = ["dep:mbus-serial", "std-required"]
upstream-serial-ascii = ["dep:mbus-serial", "std-required"]

# Downstream features
downstream-tcp = ["dep:mbus-network", "std-required"]
downstream-serial-rtu = ["dep:mbus-serial", "std-required"]
downstream-serial-ascii = ["dep:mbus-serial", "std-required"]

[[example]]
name = "ws_to_tcp"
required-features = ["upstream-tcp", "downstream-tcp"]

[[example]]
name = "ws_to_tcp_production"
required-features = ["upstream-ws", "downstream-tcp"]

[[example]]
name = "ws_to_multi_downstream"
required-features = ["upstream-ws", "downstream-tcp"]

[[example]]
name = "ws_to_rtu"
required-features = ["upstream-ws", "downstream-serial-rtu"]

[[example]]
name = "tcp_to_rtu"
required-features = ["downstream-tcp", "downstream-serial-rtu"]

[[example]]
name = "rtu_upstream_to_tcp"
required-features = ["upstream-serial-rtu", "downstream-tcp", "async"]
