[package]
name = "mbus-macros"
version = "0.11.0"
edition.workspace = true
authors.workspace = true
license-file = "LICENSE"
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true
description = "Derive and attribute macros for mbus-server and mbus-async app and mapping models"

[lib]
proc-macro = true

[features]
default = []
## Enables defmt logging support for embedded/no_std targets.
defmt = []
## Enables Display trait implementations for generated code.
display = []

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true

[dev-dependencies]
trybuild = "1"
