[package]
name = "mbus-network"
version = "0.8.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true
description = "TCP and network transport implementations for modbus-rs, including sync, Tokio, server, and WASM adapters"

[dependencies]
mbus-core = { workspace = true }

heapless = { workspace = true }
log = { workspace = true, optional = true }
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["net", "io-util", "time"], optional = true }
tokio-tungstenite = { version = "0.29.0", optional = true }
futures-util = { version = "0.3", optional = true }
bytes = { version = "1", optional = true }

[dependencies.web-sys]
version = "0.3"
optional = true
features = [
    "WebSocket",
    "MessageEvent",
    "ErrorEvent",
    "CloseEvent",
    "BinaryType",
    "Blob",
    "Event",
]

[features]
default = []
logging = ["dep:log"]
wasm = ["dep:wasm-bindgen", "dep:js-sys", "dep:web-sys"]
async = ["dep:tokio", "mbus-core/async"]
# WebSocket upstream transport for the gateway: wraps an accepted tokio-tungstenite
# WebSocketStream as an AsyncTransport so AsyncWsGatewayServer can use run_async_session.
ws-server = ["dep:tokio-tungstenite", "dep:futures-util", "dep:tokio", "dep:bytes", "mbus-core/async"]
