[package]
name = "mbus-network"
version = "0.14.0"
edition.workspace = true
authors.workspace = true
license-file = "LICENSE"
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true
description = "TCP and network transport implementations for modbus-rs, including sync, Tokio, server, and WASM adapters"

[dependencies]
mbus-core = { workspace = true }

heapless = { workspace = true }
log = { workspace = true, optional = true }
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["net", "io-util", "time"], optional = true }
tokio-tungstenite = { version = "0.29.0", optional = true }
futures-util = { version = "0.3", optional = true }
bytes = { version = "1", optional = true }

[dependencies.web-sys]
version = "0.3"
optional = true
features = [
    "WebSocket",
    "MessageEvent",
    "ErrorEvent",
    "CloseEvent",
    "BinaryType",
    "Blob",
    "Event",
]

[features]
default = ["tcp-client", "tcp-server"]
logging = ["dep:log"]

# Symmetrical TCP Transports
tcp-client = []
tcp-server = []
tcp-async = ["dep:tokio", "mbus-core/async"]

# Symmetrical WebSocket Transports
ws-client = ["dep:wasm-bindgen", "dep:js-sys", "dep:web-sys"]
ws-server = ["dep:tokio-tungstenite", "dep:futures-util", "dep:tokio", "dep:bytes", "mbus-core/async"]

# Backward-Compatibility / Legacy Aliases
async = ["tcp-async"]
wasm = ["ws-client", "mbus-core/async"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
futures-channel = "0.3"
futures-util = { version = "0.3", features = ["sink"] }
gloo-net = { version = "0.6.0", features = ["websocket"] }
wasm-bindgen-futures = "0.4"
gloo-console = "0.3"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Window", "Event"] }
gloo-timers = { version = "0.3", features = ["futures"] }

