[package]
name = "mbus-serial"
version.workspace = true
edition.workspace = true
authors.workspace = true
license-file = "LICENSE"
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description.workspace = true

[dependencies]
mbus-core ={ workspace = true }

heapless ={ workspace = true }
serialport = { version = "4.2.2", default-features = true }