[package]
name = "modbus-rs"
version = "0.3.0"
edition = "2024"
authors = ["Raghava Ch <ch.raghava44@gmail.com>"]
license.workspace = true
repository = "https://github.com/Raghava-Ch/modbus-rs"
homepage = "https://github.com/Raghava-Ch/modbus-rs"
readme = "README.md"
keywords = ["modbus", "embedded", "no-std", "device"]
categories = ["embedded", "no-std"]
description = "High-level Modbus client facade for embedded and std environments with TCP, RTU, and ASCII support"

[dependencies]
mbus-core   = { workspace = true }
mbus-serial = { workspace = true, optional = true }
mbus-network    = { workspace = true, optional = true }
mbus-client = { workspace = true, optional = true }

heapless = { workspace = true }
anyhow = "1.0.102"

[dev-dependencies]
env_logger = "0.11"

[build-dependencies]

[features]
# By default, all Modbus client services are enabled.
# To reduce binary size or exclude unused functionality,
# disable default features and enable only the services you need.
# These features are re-exported from the `mbus-core` crate.
default = [
    "client",
    "serial-rtu",
    "tcp",
    "coils",
    "registers",
    "discrete-inputs",
    "fifo",
    "file-record",
    "diagnostics",
]
client = ["mbus-client"]
serial-rtu = ["mbus-serial"]
serial-ascii = ["mbus-serial", "mbus-core/serial-ascii"]
tcp = ["mbus-network"]
coils = ["mbus-core/coils"]
registers = ["mbus-core/registers"]
discrete-inputs = ["mbus-core/discrete-inputs"]
fifo = ["mbus-core/fifo"]
file-record = ["mbus-core/file-record"]
diagnostics = ["mbus-core/diagnostics"]
logging = ["mbus-network?/logging", "mbus-serial?/logging", "mbus-client?/logging"]
