[package]
name = "modbus-rs"
version = "0.5.0"
edition = "2024"
authors = ["Raghava Ch <ch.raghava44@gmail.com>"]
license.workspace = true
repository = "https://github.com/Raghava-Ch/modbus-rs"
homepage = "https://github.com/Raghava-Ch/modbus-rs"
readme = "README.md"
keywords = ["modbus", "embedded", "no-std", "device"]
categories = ["embedded", "no-std"]
description = "Feature-gated, low-footprint Modbus client stack for no_std and std targets (MCU/RTOS/Linux/macOS/Windows) with TCP/RTU/ASCII, sync+async APIs, jittered backoff retries, and optional C/WASM bindings."

[dependencies]
mbus-core   = { workspace = true }
mbus-serial = { workspace = true, optional = true }
mbus-network    = { workspace = true, optional = true }
mbus-client = { workspace = true, optional = true }
mbus-async = { workspace = true, optional = true }
mbus-server = { workspace = true, optional = true }

heapless = { workspace = true }

[dev-dependencies]
anyhow = "1.0.102"
env_logger = "0.11"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
mbus-server = { version = "0.2.0", path = "../mbus-server" }

[build-dependencies]

[features]
# By default, all Modbus client services are enabled.
# To reduce binary size or exclude unused functionality,
# disable default features and enable only the services you need.
# These features are re-exported from the `mbus-core` crate.
default = [
    "client",
    "serial-rtu",
    "tcp",
    "coils",
    "holding-registers",
    "input-registers",
    "discrete-inputs",
    "fifo",
    "file-record",
    "diagnostics",
]
client = ["mbus-client"]
server = ["dep:mbus-server"]
serial-rtu = ["mbus-serial", "mbus-async?/serial-rtu"]
serial-ascii = ["mbus-serial", "mbus-core/serial-ascii", "mbus-async?/serial-ascii"]
tcp = ["mbus-network", "mbus-async?/tcp"]
coils = ["mbus-core/coils", "mbus-async?/coils"]
registers = ["mbus-core/registers", "mbus-async?/registers"]
holding-registers = ["registers"]
input-registers = ["registers"]
discrete-inputs = ["mbus-core/discrete-inputs", "mbus-async?/discrete-inputs"]
fifo = ["mbus-core/fifo", "mbus-async?/fifo"]
file-record = ["mbus-core/file-record", "mbus-async?/file-record"]
diagnostics = ["mbus-core/diagnostics", "mbus-async?/diagnostics"]
logging = ["mbus-network?/logging", "mbus-serial?/logging", "mbus-client?/logging"]
async = ["dep:mbus-async"]
traffic = ["mbus-client?/traffic", "mbus-async?/traffic"]

[[example]]
name = "modbus_rs_client_async_tcp"
path = "examples/modbus-rs/client/async/async_tcp_example.rs"
required-features = ["async"]

[[example]]
name = "modbus_rs_client_async_serial_rtu"
path = "examples/modbus-rs/client/async/async_serial_rtu_example.rs"
required-features = ["async", "serial-rtu"]

[[example]]
name = "modbus_rs_client_traffic_sync_tcp"
path = "examples/modbus-rs/client/traffic/traffic_sync_example.rs"
required-features = ["traffic", "client", "tcp", "coils"]

[[example]]
name = "modbus_rs_client_traffic_async_tcp"
path = "examples/modbus-rs/client/traffic/traffic_async_tcp_example.rs"
required-features = ["async", "traffic", "tcp", "coils"]

[[example]]
name = "modbus_rs_client_tcp_coils"
path = "examples/modbus-rs/client/tcp/coils_example.rs"

[[example]]
name = "modbus_rs_client_tcp_registers"
path = "examples/modbus-rs/client/tcp/registers_example.rs"

[[example]]
name = "modbus_rs_client_tcp_discrete_inputs"
path = "examples/modbus-rs/client/tcp/discrete_inputs_example.rs"

[[example]]
name = "modbus_rs_client_tcp_device_id"
path = "examples/modbus-rs/client/tcp/device_id_example.rs"

[[example]]
name = "modbus_rs_client_tcp_backoff_jitter"
path = "examples/modbus-rs/client/tcp/tcp_backoff_jitter_example.rs"

[[example]]
name = "modbus_rs_client_tcp_logging"
path = "examples/modbus-rs/client/tcp/logging_example.rs"

[[example]]
name = "modbus_rs_client_serial_rtu_coils"
path = "examples/modbus-rs/client/serial/coils_serial_example.rs"

[[example]]
name = "modbus_rs_client_serial_rtu_registers"
path = "examples/modbus-rs/client/serial/registers_serial_example.rs"

[[example]]
name = "modbus_rs_client_serial_rtu_discrete_inputs"
path = "examples/modbus-rs/client/serial/discrete_inputs_serial_example.rs"

[[example]]
name = "modbus_rs_client_serial_rtu_device_id"
path = "examples/modbus-rs/client/serial/device_id_serial_example.rs"

[[example]]
name = "modbus_rs_client_serial_rtu_backoff_jitter"
path = "examples/modbus-rs/client/serial/serial_rtu_backoff_jitter_example.rs"

[[example]]
name = "modbus_rs_client_serial_ascii_coils"
path = "examples/modbus-rs/client/serial/ascii_serial_example.rs"

[[example]]
name = "modbus_rs_client_showcase_feature_facades"
path = "examples/modbus-rs/client/showcase/feature_facades_showcase.rs"

[[example]]
name = "modbus_rs_server_showcase_coils_registers"
path = "examples/mbus-server/server/showcase_coils_registers.rs"
required-features = ["coils", "holding-registers", "input-registers"]

[[example]]
name = "modbus_rs_server_tcp_demo"
path = "examples/mbus-server/server/tcp_demo.rs"
required-features = ["coils", "holding-registers", "input-registers"]

[[example]]
name = "modbus_rs_server_std_transport_client_demo"
path = "examples/mbus-server/server/std_transport_client_demo.rs"
required-features = ["tcp", "coils", "holding-registers", "input-registers"]
